<resources>
    <string name="app_name">guidy</string>
    <string name="chating">chating</string>
    <string name="type_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="profile_image">Profile Image</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="birthdate_hint">Birthdate</string>
    <string name="language">language</string>
    <string name="save">Save</string>
    <string name="수정">Modify</string>
    <string name="person_image">Save</string>
    <string name="국적">Nationality</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Save">Save</string>
    <string name="phone_hint">Phone</string>


</resources>